--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>Thia ia Zainab's Github page</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header><h1>Zainab's Website</h1></header>
+    <main><h2>My Homepage</h2></main>
+    <footer>blah blah blah</footer>
+</body>
+</html>
