--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 			<div id="header-wrapper">
 				<header>
 					<div id="header-container">
-						<h1>Zainab Dar</h1>
+						<h1><center>Zainab Dar</center></h1>
+						<h2><center>HOME PAGE</center></h2>
+						<p>Hi, My name is Zainab Dar, I am a Junior at UNC Charlotte, majoring in Computer Science with a concentration in HCI</p>
+						<p>In my free time I enjoy hanging out with my friend, shopping, and baking</p>
 						<div id="logo-wrapper">
 							<a href="http://www.uncc.edu">
 								<img src="data:image/png;base64,
@@ -50,9 +53,7 @@
 							</a>
 						</div> <!-- /#logo-wrapper -->
 					</div> <!-- /#header-container -->
-					<h2>HOME PAGE</h2>
-					<p>Hi, My name is Zainab Dar, I am a Junior at UNC Charlotte, majoring in Computer Science with a concentration in HCI</p>
-					<p>In my free time I enjoy hanging out with my friend, shopping, and baking</p>
+				
 				</header>
 			</div> <!-- /#header-wrapper -->
 			<div id="content-wrapper">
