--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<title>Personal Webpage | UNC Charlotte</title>
 		<style type="text/css">
 			body {
-				background-color: #FFFFFF;
-				color: #333333;
+				background-color: #000000;
+				color: #000000;
 				margin: 0;
 				padding: 0;
 			}
@@ -45,6 +45,25 @@
 						<h2><center>HOME PAGE</center></h2>
 						<p>Hi, My name is Zainab Dar, I am a Junior at UNC Charlotte, majoring in Computer Science with a concentration in HCI</p>
 						<p>In my free time I enjoy hanging out with my friend, shopping, and baking</p>
+						<style>
+							body {
+							font-family: times-new-roman, sans-serif;
+							background-color: #f6cbec;
+							}
+							h1 {
+							color: rgb(192, 71, 139);
+							text-align: center;
+							}
+							p {
+							color: #000000;
+							font-size: 16px;
+							line-height: 1.5;
+							}
+							.highlight {
+							background-color: rgb(255, 255, 255);
+							padding: 5px;
+							}
+						</style>
 						<div id="logo-wrapper">
 							<a href="http://www.uncc.edu">
 								<img src="data:image/png;base64,
