--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 			body {
 				background-color: #000000;
 				color: #000000;
-				margin: 0;
+				margin: auto 0;
 				padding: 0;
 			}
 			#page-wrapper {
 				height: 100%;
-				width: 100%;
+				width: 90%;
 				max-width: 950px;
 				margin: auto;
 			}
@@ -22,7 +22,7 @@
 				border-bottom: 1px solid #006633;
 			}
 			#content-wrapper {
-				width: 100%;
+				width: 90%;
 				max-width: 950px;
 				margin: auto;
 				text-align: center;
@@ -42,7 +42,7 @@
 				<header>
 					<div id="header-container">
 						<h1><center>Zainab Dar</center></h1>
-						<h2><center>HOME PAGE</center></h2>
+						<h2><center>HOME-PAGE</center></h2>
 						<p>Hi, My name is Zainab Dar, I am a Junior at UNC Charlotte, majoring in Computer Science with a concentration in HCI</p>
 						<p>In my free time I enjoy hanging out with my friend, shopping, and baking</p>
 						<style>
@@ -50,7 +50,7 @@
 							font-family: "Times New Roman", times, sans-serif;
 							background-color: #f6cbec;
 							}
-							h1 {
+							h1, h2{
 							color: rgb(192, 71, 139);
 							text-align: center;
 							}
@@ -77,8 +77,13 @@
 			</div> <!-- /#header-wrapper -->
 			<div id="content-wrapper">
 				<p>Your personal webpage has been created.</p>
-				<a href = "itis3135/">Click to go to ITIS3135 Site</a> 
-
+		
+				<a href = "https://github.com/zainab-dar"> Github.com</a> 
+				<a href = "https://webpages.charlotte.edu/zdar1/">| CLT Web</a> 
+				<a href = "https://zainab-dar.github.io/">| Github.io</a> 
+				<a href = "itis3135/">| ITIS3135 Site</a> 
+				<a href = "https://www.linkedin.com/in/zainab-dar-630153286/">| Linkedin</a> 
+				
 			</div> <!-- /#content-wrapper -->
 		</div> <!-- /#page-wrapper -->
 	</body>
