--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
 							</a>
 						</div> <!-- /#logo-wrapper -->
 					</div> <!-- /#header-container -->
-				
+				    
+					<script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+
 				</header>
 			</div> <!-- /#header-wrapper -->
 			<div id="content-wrapper">
