intro, css, course page
updated

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,3 +1,52 @@
-
-<h1>Hi, this is Zainab Dar and this is my ITIS3135 First Course Page</h1>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zen Dolphin || ITIS 3135 || Course Page</title>
+    <link rel="stylesheet" href="styles/default.css">
+</head>
+<body>
+    <header>
+        <h1>Zen Dolphin | ITIS 3135</h1>
+        <nav>
+            <a href = "./">Home</a>
+            <span> | </span>
+            <a href = "./">Introduction</a>
+            <span> | </span>
+            <a href = "./">Contract</a>
+        </nav>
+    </header>
+    <main>
+        <h2>  ITIS 3135 Home </h2>  
+        <p> This is all the content for my ITIS 3135 class</p>
+    </main>
+    <footer>
+        <a href="https://webpages.charlotte.edu/zdar1/">CLT Web</a>
+       	<span>|</span>
+        <a href="https://github.com/zainab-dar">GitHub</a>
+       	<span>|</span>
+        <a href="https://zainab-dar.github.io">Github.io Page</a>
+       	<span>|</span> 
+        <a href="https://webpages.charlotte.edu/zdar1/itis3135/">ITIS 3135 Page</a>
+        <span>|</span>
+        <a href="https://www.freecodecamp.org/zainabdar">freeCodeCamp</a>
+        <span>|</span>
+        <a href="https://www.codecademy.com/profiles/zainab_dar">Codeecademy</a>
+        <span>|</span>
+        <a href="https://www.linkedin.com/in/zainab-dar-630153286/">LinkedIn</a>
+        
+        <p>Dar Designs &copy; 2025</p>
+       
+        <!-- Validation buttons -->
+    <p>
+        <a href="https://validator.w3.org/check?uri=referer">
+        <img src="https://www.w3.org/Icons/valid-html401" alt="Valid HTML">
+        </a>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS">
+        </a>
+    </p>
+    </footer>
+</body>
+</html>
