--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -12,7 +12,7 @@
         <nav>
             <a href = "./">Home</a>
             <span> | </span>
-            <a href = "http://127.0.0.1:3000/introduction.html">Introduction</a>
+            <a href = "introduction.html">Introduction</a>
             <span> | </span>
             <a href = "./">Contract</a>
         </nav>
