--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -14,7 +14,7 @@
             <span> | </span>
             <a href = "introduction.html">Introduction</a>
             <span> | </span>
-            <a href = "./">Contract</a>
+            <a href = "contract.html">Contract</a>
         </nav>
     </header>
     <main>
