--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zen Dolphin || ITIS 3135 || Contract Page</title>
     <link rel="stylesheet" href="styles/default.css">
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header>
