--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -10,6 +10,8 @@
 <body>
     <header>
         <h1>Zen Dolphin | ITIS 3135</h1>
+        <p class="tagline">Come along as I learn how to build my first webpage!</p>
+
         <nav>
             <a href = "./">Home</a>
             ||
