--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		<a href="https://zainab-dar.github.io">Github.io</a>
 		<span>|</span>
 		
-		<a href="./">ITIS3135</a>
+		<a href="./itis3135/index.html">ITIS3135</a>
 		<span>|</span>  
 		
 		<a href="https://www.linkedin.com/in/zainab-dar-630153286/">Linkedin</a>
