--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -13,11 +13,11 @@
         <h1>Zen Dolphin | Contract</h1>
 
         <nav>
-            <a href = "./">Home</a>
+            <a href = "./index.html">Home</a>
             ||
-            <a href = "introduction.html">Introduction</a>
+            <a href = "./introduction.html">Introduction</a>
             || 
-            <a href = "contract.html">Contract</a>
+            <a href = "./contract.html">Contract</a>
         </nav>
     </header>
     <main>
