--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -13,11 +13,11 @@
         <p class="tagline">Come along as I learn how to build my first webpage!</p>
 
         <nav>
-            <a href = "./">Home</a>
+            <a href = "./index.html">Home</a>
             ||
-            <a href = "introduction.html">Introduction</a>
-            ||
-            <a href = "contract.html">Contract</a>
+            <a href = "./introduction.html">Introduction</a>
+            || 
+            <a href = "./contract.html">Contract</a>
         </nav>
     </header>
     <main>
