--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -11,11 +11,11 @@
     <header>
         <h1>Zen Dolphin | Introduction</h1>
         <nav>
-            <a href = "./">Home</a>
+            <a href = "./index.html">Home</a>
             ||
-            <a href = "introduction.html">Introduction</a>
-            ||
-            <a href = "contract.html">Contract</a>
+            <a href = "./introduction.html">Introduction</a>
+            || 
+            <a href = "./contract.html">Contract</a>
         </nav>
     </header>
     <main>
