--- a/itis3135/dardesigns.com/index.html
+++ b/itis3135/dardesigns.com/index.html
@@ -171,7 +171,7 @@
       I resized the original to 160×83 for display; include the same width/height attributes (above).
       If you prefer a different sigil, replace the src with your chosen file at the same dimensions.
     -->
-    <img src="images/jaguar-openclipart-org.jpg" alt="Dar Designs sigil — stylized J" width="160" height="83" />
+    <img src="https://openclipart.org/detail/319165/drop-cap-d" alt="Dar Designs sigil" width="160" height="83" />
     <h1>Dar Designs
       <span class="tagline">Elegant digital & brand experiences</span>
     </h1>
@@ -181,14 +181,14 @@
     <h2>Dar Designs' services</h2>
 
     <p>
-      Dar Designs is a small studio focused on clean, accessible digital products and brand systems.
+      We are a small studio focused on providing accessible digital products.
       We combine thoughtful visual design with practical front-end engineering to craft websites
       and simple web applications that work for people and businesses.
     </p>
 
     <ul>
       <li>Human-centered branding that tells your story simply</li>
-      <li>Responsive website builds — performance & accessibility first</li>
+      <li>Responsive website builds — prioritizing performance & accessibility</li>
       <li>Fast prototypes to test ideas before you invest</li>
       <li>Design systems that scale with your product</li>
       <li>UX audits with clear, prioritized recommendations</li>
@@ -198,14 +198,13 @@
 
     <p>
       For every client we aim to reduce complexity: remove noise, highlight value, and deliver measurable improvements.
-      We prototype quickly, collaborate closely, and hand over polished assets with documentation so your team can move forward confidently.
     </p>
 
     <address>
       <strong>Contact Dar Designs</strong><br />
-      Email: <a href="mailto:hello@dardesigns.co">hello@dardesigns.co</a><br />
-      Phone: (704) 555-0183<br />
-      Studio: 412 East Mockingbird Lane, Charlotte, NC 28202
+      Email: <a href="mailto:hello@dardesigns.co">hello@dardesigns.com</a><br />
+      Phone: 445-866-3705<br />
+      Studio: 1234 Make Believe Lane, Charlotte, NC 28202
     </address>
 
     <p style="margin-top:1rem;color:var(--muted);font-size:0.95rem;">
