--- a/itis3135/dardesigns.com/index.html
+++ b/itis3135/dardesigns.com/index.html
@@ -5,43 +5,34 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Dar Designs — dardesigns.com</title>
 
-  <!--
-    Color scheme generated with Coolors:
-    https://coolors.co/ffac81-ff928b-fec3a6-efe9ae-cdeac0
-    (Use these palette hex codes in the embedded stylesheet)
-  -->
-
-  <style>
+    <style>
     /* Palette variables */
     :root{
-      --peach-1: #FFAC81;
-      --peach-2: #FF928B;
-      --peach-3: #FEC3A6;
-      --cream:   #EFE9AE;
-      --mint:    #CDEAC0;
-      --text:    #2b2b2b;
-      --muted:   #6b6b6b;
-      --white:   #ffffff;
+      --lavender-light: #E5BEED;
+      --lavender: #9593D9;
+      --blue-lavender: #7C90DB;
+      --plum-gray: #736B92;
+      --text: #2b2b2b;
+      --muted: #4b4b4b;
+      --white: #ffffff;
     }
 
-    /* Page reset & base */
     html,body{
       height:100%;
       margin:0;
       font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
       color:var(--text);
-      background: linear-gradient(180deg, var(--white) 0%, var(--mint) 100%);
+      background: linear-gradient(180deg, var(--lavender-light) 0%, var(--white) 100%);
       -webkit-font-smoothing:antialiased;
       -moz-osx-font-smoothing:grayscale;
     }
 
-    /* Layout using semantic elements (no extraneous wrappers) */
     header{
       display:flex;
       align-items:center;
       gap:1rem;
       padding:1.25rem 1.5rem;
-      background: linear-gradient(90deg, rgba(255,172,129,0.14), rgba(255,146,139,0.10));
+      background: linear-gradient(90deg, rgba(149,147,217,0.10), rgba(124,144,219,0.08));
       border-bottom: 1px solid rgba(0,0,0,0.06);
     }
 
@@ -55,7 +46,6 @@
     }
 
     header img{
-      /* Image resized for presentation (see comment above element for source) */
       width:160px;
       height:83px;
       object-fit:contain;
@@ -68,7 +58,7 @@
 
     header .tagline{
       font-size:0.9rem;
-      color:var(--muted);
+      color:var(--plum-gray);
       margin-left:0.25rem;
     }
 
@@ -76,15 +66,14 @@
       max-width:900px;
       margin:2rem auto;
       padding:1.5rem;
-      background: rgba(255,255,255,0.9);
+      background: rgba(255,255,255,0.92);
       border-radius:12px;
       box-shadow: 0 10px 30px rgba(43,43,43,0.06);
     }
 
-    /* Page title inside main */
     main h2{
       margin-top:0;
-      color: var(--peach-2);
+      color: var(--blue-lavender);
       font-size:1.5rem;
     }
 
@@ -94,7 +83,6 @@
       margin:0.6rem 0 1rem 0;
     }
 
-    /* Non-standard list bullets using ::marker replacement via list-style disabled */
     ul{
       padding-left:0;
       margin:0.5rem 0 1rem 0;
@@ -106,63 +94,60 @@
     ul li{
       padding:0.55rem 0.75rem;
       border-radius:8px;
-      background: linear-gradient(90deg, rgba(254,195,166,0.25), rgba(205,234,192,0.12));
+      background: linear-gradient(90deg, rgba(229,190,237,0.35), rgba(149,147,217,0.15));
       font-weight:600;
       display:flex;
       align-items:center;
       gap:0.6rem;
     }
 
-    /* custom bullet icon */
     ul li::before{
       content:"✦";
       font-size:0.95rem;
-      color:var(--peach-1);
+      color:var(--plum-gray);
       display:inline-block;
       width:1.1rem;
       margin-left:-0.3rem;
     }
 
-    /* Contact block using semantic address */
     address{
       display:block;
       margin-top:1.25rem;
       padding:1rem;
-      border-left:4px solid var(--peach-3);
-      background: rgba(239,233,174,0.25);
+      border-left:4px solid var(--blue-lavender);
+      background: rgba(229,190,237,0.3);
       border-radius:8px;
       font-style:normal;
       line-height:1.5;
     }
 
     address a{
-      color:var(--peach-2);
+      color:var(--lavender);
       text-decoration:none;
       font-weight:700;
     }
 
-    /* Footer */
     footer{
       margin:2rem 0 3rem 0;
       text-align:center;
-      color:var(--muted);
+      color:var(--plum-gray);
       font-size:0.95rem;
     }
 
     footer .slogan{
-      color:var(--peach-2);
+      color:var(--blue-lavender);
       font-weight:700;
       display:block;
       margin-bottom:0.35rem;
     }
 
-    /* Simple responsive tweaks */
     @media (max-width:640px){
       header{ padding:0.9rem; gap:0.6rem; }
       header img{ width:110px; height:57px; }
       main{ margin:1rem; padding:1rem; }
     }
   </style>
+  
 </head>
 <body>
   <header>
