--- a/itis3135/dardesigns.com/index.html
+++ b/itis3135/dardesigns.com/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Dar Designs — dardesigns.com</title>
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 
     <style>
     /* Palette variables */
