add link to firm page

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -39,7 +39,7 @@
         ||
         <a href="https://www.linkedin.com/in/zainab-dar-630153286/">LinkedIn</a>
         
-        <p>Dar Designs &copy; 2025</p>
+        <p><a href = "dardesigns.com">Dar Designs</a> &copy; 2025</p>
        
     </footer>
 </body>
