--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
 		<span>|</span>  
 		
 		<a href="https://www.linkedin.com/in/zainab-dar-630153286/">Linkedin</a>
+
+    <p><a href = "dardesigns.com">Dar Designs</a> &copy; 2025</p>
+
     </div>
 	</footer>
   </body>
