--- a/index.html
+++ b/index.html
@@ -125,10 +125,12 @@
 		<span>|</span>  
 		
 		<a href="https://www.linkedin.com/in/zainab-dar-630153286/">Linkedin</a>
-
-    <p><a href = "dardesigns.com">Dar Designs</a> &copy; 2025</p>
-
     </div>
+    
+    <p style="text-align: center; margin-top: 0.5rem;">
+    <a href="dardesigns.co">Dar Designs</a> &copy; 2025
+    </p>
+
 	</footer>
   </body>
 </html>
