--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </div>
     
     <p style="text-align: center; margin-top: 0.5rem;">
-    <a href="dardesigns.co">Dar Designs</a> &copy; 2025
+    <a href="dardesigns.com">Dar Designs</a> &copy; 2025
     </p>
 
 	</footer>
