--- a/index.html
+++ b/index.html
@@ -127,10 +127,7 @@
 		<a href="https://www.linkedin.com/in/zainab-dar-630153286/">Linkedin</a>
     </div>
     
-    <p style="text-align: center; margin-top: 0.5rem;">
-    <a href="dardesigns.com">Dar Designs</a> &copy; 2025
-    </p>
-
+    <p><a href = "dardesigns.com">Dar Designs</a> &copy; 2025</p>
 	</footer>
   </body>
 </html>
