--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 		<a href="https://www.linkedin.com/in/zainab-dar-630153286/">Linkedin</a>
     </div>
     
-    <p><a href = "dardesigns.com">Dar Designs</a> &copy; 2025</p>
+    <p><a href = "./dardesigns.com/">Dar Designs</a> &copy; 2025</p>
 	</footer>
   </body>
 </html>
