--- a/itis3135/dardesigns.com/index.html
+++ b/itis3135/dardesigns.com/index.html
@@ -198,7 +198,7 @@
 
   <footer>
     <span class="slogan">"Design that feels like home."</span>
-    <small>&copy; 2025 Dar Designs — dardesigns.co</small>
+    <small>&copy; 2025 Dar Designs — dardesigns.com</small>
   </footer>
 </body>
 </html>
