--- a/itis3135/dardesigns.com/index.html
+++ b/itis3135/dardesigns.com/index.html
@@ -155,7 +155,7 @@
       I resized the original to 160×83 for display; include the same width/height attributes (above).
       If you prefer a different sigil, replace the src with your chosen file at the same dimensions.
     -->
-    <img src="https://openclipart.org/detail/319165/drop-cap-d" alt="Dar Designs sigil" width="160" height="83" />
+    <img src="images/d-logo.png" alt="Dar Designs sigil" width="160" height="83" />
     <h1>Dar Designs
       <span class="tagline">Elegant digital & brand experiences</span>
     </h1>
