--- a/itis3135/dardesigns.com/index.html
+++ b/itis3135/dardesigns.com/index.html
@@ -150,12 +150,9 @@
 </head>
 <body>
   <header>
-    <!--
-      Logo: jaguar-openclipart-org.jpg (original source: openclipart.org) — public domain / CC0.
-      I resized the original to 160×83 for display; include the same width/height attributes (above).
-      If you prefer a different sigil, replace the src with your chosen file at the same dimensions.
-    -->
-    <img src="images/d-logo.png" alt="Dar Designs sigil" width="160" height="83" />
+    <figure>        
+        <img src="images/d-logo.jpeg" alt="Dar Designs" width="100" height="53"/>
+    </figure>
     <h1>Dar Designs
       <span class="tagline">Elegant digital & brand experiences</span>
     </h1>
