--- a/itis3135/dardesigns.com/index.html
+++ b/itis3135/dardesigns.com/index.html
@@ -151,7 +151,7 @@
 <body>
   <header>
     <figure>        
-        <img src="images/d-logo.jpeg" alt="Dar Designs" width="100" height="53"/>
+        <img src="images/d-logo.png" alt="Dar Designs" width="150" height="83"/>
     </figure>
     <h1>Dar Designs
       <span class="tagline">Elegant digital & brand experiences</span>
