--- a/index.html
+++ b/index.html
@@ -112,20 +112,18 @@
 
     <footer>
 	<div class = "footer-nav">
+    <nav>
     <a href="https://github.com/zainab-dar">Github.com </a>
-	  <span>|</span>
       	
 		<a href="https://webpages.charlotte.edu/zdar1/">CLT Web</a>
-		<span>|</span>
 		
 		<a href="https://zainab-dar.github.io">Github.io</a>
-		<span>|</span>
 		
 		<a href="./itis3135/index.html">ITIS3135</a>
-		<span>|</span>  
 		
 		<a href="https://www.linkedin.com/in/zainab-dar-630153286/">Linkedin</a>
-    </div>
+    </nav>
+  </div>
 	</footer>
   </body>
 </html>
