--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 		background-color: #cfa5a0;  /* your muted pink */
 		padding: 15px 0;
 	}
+  
   .footer-nav nav {
     display: flex;
     justify-content: center;
@@ -78,10 +79,9 @@
     font-weight: bold;
     text-decoration: none;
     position: relative;
-    padding: 0 15px; /* space for the || */
+    padding: 0 15px; 
   }
 
-  /* Add || on left and right of every link */
   .footer-nav a::before,
   .footer-nav a::after {
     content: "|";
@@ -97,8 +97,9 @@
     right: 0;
   }
 
-    </style>
-    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+  </style>
+
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
   </head>
   
   <body>
