--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
 		background-color: #cfa5a0;  /* your muted pink */
 		padding: 15px 0;
 	}
-  
   .footer-nav nav {
     display: flex;
     justify-content: center;
@@ -98,7 +97,7 @@
   }
 
   </style>
-
+  
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
   </head>
   
@@ -126,6 +125,8 @@
     <footer>
 	<div class = "footer-nav">
     <nav>
+    <a href="https://webpages.charlotte.edu/zdar1/">CLT Web</a>
+
     <a href="https://github.com/zainab-dar">Github.com </a>
     
 		<a href="https://webpages.charlotte.edu/zdar1/">CLT Web</a>
