--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -45,8 +45,9 @@
     <footer>
         <div class="footer-nav">
         <nav>
-        <a href="https://webpages.charlotte.edu/zdar1/">CLT Web</a>
-       	
+        <a href="./">CLT Web</a>
+       	<a href="https://webpages.charlotte.edu/zdar1/">CLT Web</a>
+
         <a href="https://github.com/zainab-dar">GitHub</a>
        	
         <a href="https://zainab-dar.github.io">Github.io Page</a>
