--- a/index.html
+++ b/index.html
@@ -129,12 +129,10 @@
 
     <a href="https://github.com/zainab-dar">Github.com </a>
     
-		<a href="https://webpages.charlotte.edu/zdar1/">CLT Web</a>
+		<a href="https://webpages.charlotte.edu/zdar1/itis3135">ITIS3135</a>
 		
 		<a href="https://zainab-dar.github.io">Github.io</a>
-		
-		<a href="./itis3135/index.html">ITIS3135</a>
-		
+				
 		<a href="https://www.linkedin.com/in/zainab-dar-630153286/">Linkedin</a>
     </nav>
   </div>
