--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Zen Dolphin | ITIS 3135</h1>
+        <h1>Zainab Dar's Zen Dolphin | ITIS 3135</h1>
         <p class="tagline">Come along as I learn how to build my first webpage!</p>
 
         <nav>
