--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Zen Dolphin | Contract</h1>
+        <h1>Zainab Dar's Zen Dolphin | Contract</h1>
 
         <nav>
             <a href = "./index.html">Home</a>
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <h2>Zainab Dar : Contract</h2>  
+        <h2>Contract</h2>  
         
         <p>I, Zainab K. Dar agree to abide by the terms of the course contract in my Fall 2024, ITIS3135, Front-End Web Development with my instructor, Professor D.I. von Briesen. I understand that all work that I do on publicly available online tools will be available to the world, and will not put information there that is inappropriate for schoolwork, or that I wish to keep private. I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences. I also understand that given the structure and content of this class it’s possible to find many examples online or even view my classmates’ code directly. I swear that I will only use these resources to learn, and will not cut and paste code except where I have properly given credit (i.e. external libraries) and never from my classmates. </p>
         <p class="italic-text">Signed: Zainab K. Dar , 31/08/2025.</p>        
