--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
     <a href="https://www.codecademy.com/profiles/zainab_dar">Codeacademy</a>
         
     <a href="https://www.linkedin.com/in/zainab-dar-630153286/">LinkedIn</a>
-    <a href="">LinkedIn</a>
+    
+    <a href="./itis3135/dozephin-site/about.html">Dozephin</a>
     </nav>
   </div>
 	</footer>
