--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -58,7 +58,7 @@
         
         <a href="https://www.linkedin.com/in/zainab-dar-630153286/">LinkedIn</a>
         
-        <a href="">Dozephin</a>
+        <a href="./dozephin-site/about.html">Dozephin</a>
         </nav>
         </div>
         <p><a href = "./dardesigns.com/">Dar Designs</a> &copy; 2025</p>
