--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -43,6 +43,9 @@
         <a href="https://www.codecademy.com/profiles/zainab_dar">Codeacademy</a>
         
         <a href="https://www.linkedin.com/in/zainab-dar-630153286/">LinkedIn</a>
+        
+        <a href="./dozephin-site/about.html">Dozephin</a>
+
         </nav>
         </div>
         <p><a href = "./dardesigns.com/">Dar Designs</a> &copy; 2025</p>
