--- a/itis3135/dozephin-site/about.html
+++ b/itis3135/dozephin-site/about.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dozephin | About</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
   <header>
@@ -33,7 +35,7 @@
       <nav>
         <a href="https://webpages.charlotte.edu/zdar1/"> CLT Web </a>
         <a href="https://github.com/zainab-dar"> GitHub </a>
-        <a href="https://zainab-dar.github.io"> GitHub.i </a>
+        <a href="https://zainab-dar.github.io"> GitHub.io </a>
         <a href="https://webpages.charlotte.edu/zdar1/itis3135"> ITIS3135 </a>
         <a href="https://www.freecodecamp.org/zainabdar"> freeCodeCamp </a>
         <a href="https://www.codecademy.com/profiles/zainab_dar"> Codecademy </a>
