--- a/itis3135/dozephin-site/about.html
+++ b/itis3135/dozephin-site/about.html
@@ -6,12 +6,11 @@
   <title>Dozephin | About</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-
 </head>
 <body>
   <header>
     <h1>Dozephin</h1>
-    <p><em>Ride the Waves to Better Sleep</em></p>
+    <p><em>Waves to Better Sleep</em></p>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
