--- a/itis3135/dozephin-site/index.html
+++ b/itis3135/dozephin-site/index.html
@@ -29,6 +29,18 @@
   </main>
 
   <footer>
+    <div class="footer-nav">
+      <nav>
+        <a href="https://webpages.charlotte.edu/zdar1/"> CLT Web </a>
+        <a href="https://github.com/zainab-dar"> GitHub </a>
+        <a href="https://zainab-dar.github.io"> GitHub.io </a>
+        <a href="https://webpages.charlotte.edu/zdar1/itis3135"> ITIS3135 </a>
+        <a href="https://www.freecodecamp.org/zainabdar"> freeCodeCamp </a>
+        <a href="https://www.codecademy.com/profiles/zainab_dar"> Codecademy </a>
+        <a href="https://www.linkedin.com/in/zainab-dar-630153286/"> LinkedIn </a>
+        <a href="./index.html"> Dozephin </a>
+      </nav>
+    </div>
     <p>&copy; 2025 Dozephin — <em>Waves to Better Sleep</em></p>
   </footer>
 </body>
