--- a/itis3135/dozephin-site/about.html
+++ b/itis3135/dozephin-site/about.html
@@ -8,11 +8,11 @@
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header>
+   <header>
     <h1>Dozephin</h1>
     <p><em>Waves to Better Sleep</em></p>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html">Home</a> |
       <a href="about.html">About</a>
     </nav>
   </header>
