--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -18,6 +18,8 @@
             <a href = "./introduction.html"> Introduction </a>
         
             <a href = "./contract.html"> Contract </a>
+            
+            <a href = "./website_evaluations.html"> Website Evaluation </a>
         </nav>
     </header>
     <main>
