--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -16,6 +16,9 @@
             <a href = "./introduction.html">Introduction</a>
             
             <a href = "./contract.html">Contract</a>
+            
+            <a href = "./website_evaluations.html"> Website Evaluation </a>
+
         </nav>
     </header>
     <main>
