--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -8,10 +8,13 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
+    <div data-include="header.html"></div>
+    Content
+    <div data-include="footer.html"></div>
     <main>
         <h2> ITIS 3135 Home </h2>  
         <p> This is all the content for my ITIS 3135 class</p>
     </main>
+    <script src="scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
