--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   body {
     font-family: "Times New Roman", sans-serif;
     background-color: #f5f0e6; /* light beige background for the main content */
-    margin: 0;
+    margin: 0px;
     padding: 0;
     display: flex;
     flex-direction: column;
@@ -35,9 +35,9 @@
 
   p {
       color: #3b3b3b; /* dark gray for readability */
-      font-size: 16px;
+      font-size: 17px;
       line-height: 1.6;
-      padding: 0 20px;
+      padding: 0 80px;
     }
 
   a {
