--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
     padding: 20px 0;
     flex: 1; /* makes content expand to push footer to bottom */
     }
-
+  
+  main{
+    margin: 7%;
+  }
 	footer {
 		background-color: #cfa5a0;  /* your muted pink */
 		padding: 15px 0;
