--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     }
   
   main{
-    padding: 17%;
+    padding: auto;
+    margin: 0 auto;
   }
 	footer {
 		background-color: #cfa5a0;  /* your muted pink */
