--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -12,7 +12,31 @@
 
     <main>
         <h2> Website Evaluation </h2>  
-        <p> This is all the content for my ITIS 3135 class</p>
+        
+        <section>
+            <h3><a href="https://www.apple.com" target="_blank">Apple</a></h3>
+            <p>
+                Apple’s website is clean, modern, and user-friendly. It highlights its products effectively with high-quality visuals and minimal text.
+            </p>
+            <ul>
+                <li><strong>Contrast:</strong> Excellent contrast. There are bold product images on simple white or black backgrounds, making their products stand out.</li>
+                <li><strong>Repetition:</strong> There is a consistent use of fonts, layout, and color themes across pages. It strengthens the brand identity and familiar features throughout the pages</li>
+                <li><strong>Alignment:</strong> Strong grid-based design with centered product  ensures visual balance.</li>
+                <li><strong>Proximity:</strong> Related information and links are grouped together, making navigation easy.</li>
+            </ul>
+        </section>    
+         <section>
+      <h3><a href="https://www.lingscars.com" target="_blank">Ling’s Cars</a></h3>
+      <p>
+        Ling’s Cars is notorious for being visually overwhelming, filled with flashing animations, clashing colors, and scattered content.
+      </p>
+      <ul>
+        <li><strong>Contrast:</strong> Poor, there are too many bright, clashing colors that make the site visually exhausting.</li>
+        <li><strong>Repetition:</strong> Inconsistent fonts, colors, and graphics create a chaotic experience.</li>
+        <li><strong>Alignment:</strong> Elements are scattered without a clear structure, making the site feel disorganized.</li>
+        <li><strong>Proximity:</strong> Related content is not grouped effectively, so users struggle to find information quickly.</li>
+      </ul>
+    </section>
     </main>
     <div data-include="components/footer.html"></div>
     <script src="scripts/HTMLInclude.min.js"></script>
