--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -25,10 +25,10 @@
                 <li><strong>Proximity:</strong> Related information and links are grouped together, making navigation easy.</li>
             </ul>
         </section>    
-         <section>
+        <section>
       <h3><a href="https://www.lingscars.com" target="_blank">Ling’s Cars</a></h3>
       <p>
-        Ling’s Cars is notorious for being visually overwhelming, filled with flashing animations, clashing colors, and scattered content.
+        Ling’s Cars is visually overwhelming, filled with flashing animations, clashing colors, and scattered content.
       </p>
       <ul>
         <li><strong>Contrast:</strong> Poor, there are too many bright, clashing colors that make the site visually exhausting.</li>
