--- a/itis3135/fccfsjs_outline.html
+++ b/itis3135/fccfsjs_outline.html
@@ -13,10 +13,52 @@
 <main>
     <h2>FCC Full Stack JavaScript Outline</h2>  
     
-    <p> Hi, my name is Zainab. I'm a first-year student, but technically a junior because I went to middle college. I am majoring in Computer Science with a concentration in Human Computer Interaction. In my free time I like to hang out with friends, bake, and go to cafes.
-    </p>
+        <table>
+            <thead>
+                <tr>
+                    <th>Section Title</th>
+                    <th>Steps</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>1. Code Editors</td><td>5 steps</td><td>In these lessons, you will learn how to work with code editors and IDEs. You will learn various concepts about the most popular code editor, VS Code such as its installation, how to create a project in it, keyboard shortcuts, and extensions.</td></tr>
+                <tr><td>2. Variables and Strings</td><td>62 steps</td><td>In these lessons, you will learn the fundamentals of JavaScript. Topics covered include, but are not limited to, variables, data types, how JavaScript interacts with HTML and CSS, and much more.</td></tr>
+                <tr><td>3. Booleans and Numbers</td><td>37 steps</td><td>In these lessons you will learn about the number type, arithmetic operators, and using them with numbers and strings.</td></tr>
+                <tr><td>4. Functions</td><td>38 steps</td><td>In these lessons, you will learn how to reuse a block of code with functions. You will learn what the purpose of a function is and how they work, and how scope works in programming.</td></tr>
+                <tr><td>3. Arrays</td><td>35 steps</td><td>In these lessons, you will learn how to work with JavaScript arrays. You will learn about what makes an array, one-dimensional and two-dimensional arrays, how to access and update the elements in an array, and much more.</td></tr>
+                <tr><td>5. Objects</td><td>28 steps</td><td>In these lessons, you will learn the fundamentals of JavaScript objects, including how to create them, access their properties, and understand the difference between primitive and non-primitive data types.</td></tr>
+                <tr><td>6. Loops</td><td>22 steps</td><td>Loops are an essential part of JavaScript. That's why the following lessons have been prepared for you to learn about the different types of loops and how they work, and also how iteration works.</td></tr>
+                <tr><td>8. JavaScript Fundamentals Review</td><td>30 steps</td><td>In these lessons you will learn about string objects, the toString() method, the Number constructor and more.</td></tr>
+                <tr><td>7. Higher Order Functions and Callbacks</td><td>37 steps</td><td>In these lessons, you will learn how to work with higher order functions and callbacks. The higher order functions you will learn include map(), filter(), reduce(), sort(), every(), and some(). You will also learn how to chain these methods together to achieve your desired results.</td></tr>
+                <tr><td>8. DOM Manipulation and Events</td><td>87 steps</td><td>In these lessons, you will learn how to work with the Document Object Model (DOM), the addEventListener() method and events, and web APIs.</td></tr>
+                <tr><td>9. JavaScript and Accessibility</td><td>42 steps</td><td>In these lessons you will learn more about ARIA attributes like aria-expanded, aria-live, and common ARIA states.</td></tr>
+                <tr><td>10. Debugging</td><td>8 steps</td><td>In these lessons, you will learn about the common errors in JavaScript and the techniques you can use to fix them – a process called debugging.</td></tr>
+                <tr><td>11. Basic Regex</td><td>47 steps</td><td>In these lessons, you will learn about regular expressions in JavaScript. You will learn about the methods for working with regular expressions, modifiers, character classes, lookaheads, lookbehinds, back-references, quantifiers, and more.</td></tr>
+                <tr><td>12. Form Validation</td><td>103 steps</td><td>In these lessons, you will learn about form validation in JavaScript. You will learn about the various ways to validate forms, how the preventDefault() method works, and how the submit event works.</td></tr>
+                <tr><td>13. Dates</td><td>5 steps</td><td>In these lessons, you will learn about the JavaScript date object. You will learn about the methods for working with dates and how to format dates.</td></tr>
+                <tr><td>14. Audio and Video Events</td><td>55 steps</td><td>In these lessons, you will learn how to work with audio and video files using JavaScript. You will learn about the Audio and Video constructors, their methods and properties, audio and video formats, codecs, the HTMLMediaElement API, and much more.</td></tr>
+                <tr><td>15. Maps and Sets</td><td>37 steps</td><td>In these lessons, you will learn about JavaScript Map and Set. You will also learn how they both differ from WeakSets and WeakMaps.</td></tr>
+                <tr><td>16. localStorage and CRUD Operations</td><td>78 steps</td><td>In these lessons, you will learn about client-side storage and CRUD operations in JavaScript. You will learn about localStorage and sessionStorage alongside their methods and properties, cookies, the Cache API, IndexDB, and much more.</td></tr>
+                <tr><td>17. Classes</td><td>68 steps</td><td>In these lessons, you will learn about classes in JavaScript. You will learn about inheritance, the this keyword, static properties and methods, and more.</td></tr>
+                <tr><td>18. Recursion</td><td>112 steps</td><td>In this lesson, you will learn about recursion and the call stack.</td></tr>
+                <tr><td>19. Functional Programming</td><td>23 steps</td><td>In these lessons, you will learn about functional programming and how to nest functions using a technique called currying.</td></tr>
+                <tr><td>20. Asychronous JavaScript</td><td>36 steps</td><td>In these lessons, you will learn about asynchronous programming in JavaScript. You will learn about the differences between synchronous and asynchronous programming, how the async keyword works, the Fetch API, promises, async/await, the Geolocation API, and much more.</td></tr>
+            </tbody>
+        </table>
 
-   
+        <section class="schedule">
+            <h2>Personal Completion Schedule (6 Weeks)</h2>
+            <p><strong>Goal:</strong> I plan to complete the FreeCodeCamp JavaScript curriculum within six weeks. Below is my schedule and commitment plan.</p>
+            <ul>
+                <li><strong>Week 1 (Oct 7 – Oct 13):</strong> 1-5</li>
+                <li><strong>Week 2 (Oct 14 – Oct 20):</strong> 6-9</li>
+                <li><strong>Week 3 (Oct 21 – Oct 27):</strong> 10-13</li>
+                <li><strong>Week 4 (Oct 28 – Nov 3):</strong> 14-16</li>
+                <li><strong>Week 5 (Nov 4 – Nov 10):</strong> 17-20</li>
+            </ul>
+            <p><em>I acknowledge that this is one single assignment and commit to completing it within this timeframe.</em></p>
+        </section>   
 </main>
     <div data-include="components/footer.html"></div>
     <script src="scripts/HTMLInclude.min.js"></script>
