--- a/itis3135/fccfsjs_outline.html
+++ b/itis3135/fccfsjs_outline.html
@@ -49,15 +49,18 @@
 
         <section class="schedule">
             <h2>Personal Completion Schedule (6 Weeks)</h2>
-            <p><strong>Goal:</strong> I plan to complete the FreeCodeCamp JavaScript curriculum within six weeks. Below is my schedule and commitment plan.</p>
+            <p> I, Zainab Dar, intend to finish the freeCodeCamp Full Stack Developer JavaScript section over the next 6 weeks (x should be < 7, 7 if you were to include the week break) according to the following general schedule:
+</p>
             <ul>
-                <li><strong>Week 1 (Oct 7 – Oct 13):</strong> 1-5</li>
-                <li><strong>Week 2 (Oct 14 – Oct 20):</strong> 6-9</li>
-                <li><strong>Week 3 (Oct 21 – Oct 27):</strong> 10-13</li>
-                <li><strong>Week 4 (Oct 28 – Nov 3):</strong> 14-16</li>
-                <li><strong>Week 5 (Nov 4 – Nov 10):</strong> 17-20</li>
+                <li><strong>Week 1 (Oct 7 – Oct 13):</strong> 1-4</li>
+                <li><strong>Week 2 (Oct 14 – Oct 20):</strong> 5-8</li>
+                <li><strong>Week 3 (Oct 21 – Oct 27):</strong> 9-11</li>
+                <li><strong>Week 4 (Oct 28 – Nov 3):</strong> 12-15</li>
+                <li><strong>Week 5 (Nov 4 – Nov 10):</strong> 16-18</li>
+                <li><strong>Week 5 (Nov 11 – Nov 18):</strong> 19-20</li>
             </ul>
-            <p><em>I acknowledge that this is one single assignment and commit to completing it within this timeframe.</em></p>
+            <p><em>I acknowledge that this is a single assignment within the course and not broken out into parts like the previous certification and will take responsibility for pacing myself. </em></p>
+            <p><em>10/06/2025</em></p>
         </section>   
 </main>
     <div data-include="components/footer.html"></div>
