--- a/itis3135/fccfsjs_outline.html
+++ b/itis3135/fccfsjs_outline.html
@@ -49,7 +49,7 @@
 
         <section class="schedule">
             <h2>Personal Completion Schedule (6 Weeks)</h2>
-            <p>I, Zainab Dar, intend to finish the freeCodeCamp Full Stack Developer JavaScript section over the next 6 weeks (x should be < 7, 7 if you were to include the week break) according to the following general schedule:</p>
+            <p>I, Zainab Dar, intend to finish the freeCodeCamp Full Stack Developer JavaScript section over the next 6 weeks according to the following general schedule:</p>
             <ul>
                 <li><strong>Week 1 (Oct 7 – Oct 13):</strong> 1-4</li>
                 <li><strong>Week 2 (Oct 14 – Oct 20):</strong> 5-8</li>
