--- a/itis3135/fccfsjs_outline.html
+++ b/itis3135/fccfsjs_outline.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zen Dolphin || ITIS 3135 || FCC Full Stack JavaScript Outline</title>
+    <title>Zen Dolphin || ITIS 3135 || FCC JS Outline</title>
     <link rel="stylesheet" href="styles/default.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
@@ -11,7 +11,7 @@
     <div data-include="components/header.html"></div>    
 
 <main>
-    <h2>FCC Full Stack JavaScript Outline</h2>  
+    <h2>FCC JS Outline</h2>  
     
         <table>
             <thead>
